Agregado de animaciones en todas las paginas y en el header y footer

--- a/pages/automotores.html
+++ b/pages/automotores.html
@@ -48,13 +48,78 @@
     
     <section class="autos">    
         <!-- Auto 1 -->
-        <img id="peugeot-308" src="../multimedia/autos/peugeot-308/308.gif" alt="Peugeot 308 1.6"> 
-
-        <!-- Auto 2 -->
-        <img id="gol-trend" src="../multimedia/autos/gol-trend/gol.gif" alt="Gol trend 1.6"> 
-        
-                <!-- Auto 2 -->
-                <img id="gol-trend" src="../multimedia/autos/gol-trend/gol.gif" alt="Gol trend 1.6"> 
+        <div class="card">
+          <input class="inputauto" type="checkbox" name="">
+          <div class="toggle">+</div>
+          <div class="imgBx"><img id="peugeot-308" src="../multimedia/autos/peugeot-308/308.gif" alt="Peugeot 308 1.6"> 
+          </div>
+          <div class="details">
+              <h2>PEUGEOT 308</h2>
+              <h6>
+               <ul> 
+                <li>📌 1.6 Active</li>
+                <li>📌 Modelo 2016</li>
+                <li>📌 Tanque 60 litros</li>
+                <li>📌 Baúl 430 litros</li>
+                <li>📌 Caja Manual 5ta</li>
+                <li>📌 Impuestos al día</li>
+                <li>📌 Valor: $2900000</li>
+                <li>📌 Excelente por donde se mire!</li>
+                <li>📌 Llévatelo con mínimos requisitos! 👍</li>
+                <li>📌 Listo para transferir</li>
+                <li>📌 Contamos con gestoría propia </li>
+              </ul>
+            </h6>
+          </div>
+        </div>
+          <!-- Auto 2 -->
+          <div class="card">
+            <input class="inputauto" type="checkbox" name="">
+            <div class="toggle">+</div>
+            <div class="imgBx"> <img id="gol-trend" src="../multimedia/autos/gol-trend/gol.gif" alt="Gol trend 1.6"></div>
+            <div class="details">
+                <h2>VOLKSWAGEN GOL TREND</h2>
+                <h6>
+                 <ul> 
+                  <li>📌 2017 hatchback</li>
+                  <li>📌 63975 Km</li>
+                  <li>📌 Doble Airbag</li>
+                  <li>📌 5 puertas</li>
+                  <li>📌 Transmisión manual</li>
+                  <li>📌 Motor 1.6</li>
+                  <li>📌 Precio $2400000</li>
+                  <li>📌 Neumáticos y llantas en excelente estado</li>
+                  <li>📌 Impuestos al día</li>
+                  <li>📌 Listo para transferir</li>
+                  <li>📌 Contamos con gestoría propia </li>
+                </ul>
+              </h6>
+            </div>
+          </div>
+          <!-- Auto 2 -->
+          <div class="card">
+            <input class="inputauto" type="checkbox" name="">
+            <div class="toggle">+</div>
+            <div class="imgBx"> <img id="gol-trend" src="../multimedia/autos/gol-trend/gol.gif" alt="Gol trend 1.6"></div>
+            <div class="details">
+                <h2>VOLKSWAGEN GOL TREND</h2>
+                <h6>
+                 <ul> 
+                  <li>📌 2017 hatchback</li>
+                  <li>📌 63975 Km</li>
+                  <li>📌 Doble Airbag</li>
+                  <li>📌 5 puertas</li>
+                  <li>📌 Transmisión manual</li>
+                  <li>📌 Motor 1.6</li>
+                  <li>📌 Precio $2400000</li>
+                  <li>📌 Neumáticos y llantas en excelente estado</li>
+                  <li>📌 Impuestos al día</li>
+                  <li>📌 Listo para transferir</li>
+                  <li>📌 Contamos con gestoría propia </li>
+                </ul>
+              </h6>
+            </div>
+          </div>
     </section>
 
     <footer class="footer">
