--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="./css/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
 </head>
 
@@ -288,23 +290,23 @@
   </div>
 
   
-      <div class="row">
+    <div class="row">
         <h2 class="text-center ubi">Estamos en:</h2>
-        <div class="col-md-6 text-center">
-          <ul class="list-unstyled mb-0">
-              <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                 <a href="https://www.google.com/maps?ll=-31.373961,-58.012663&z=17&t=m&hl=es-419&gl=AR&mapclient=embed&cid=9566184030273605600"  target="_blank"><p>Concordia, Entre Rios, Argentina</p></a>
-              </li>
-              <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                  <a  href="tel:+5493454214174" target="_blank"><p>3454166220</p></a>
-              </li>
-              <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                 <a href="contacto@lacasadelasllantas.com" target="_blank"><p>contacto@lacasadelasllantas.com</p></a>
-              </li>
-          </ul>
-      </div>
-      <div class="contacto__mapa text-center col-md-6">
+      <div class="contacto__mapa text-center col-md-8">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d902.2547836601474!2d-58.01260617371327!3d-31.373863601085997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ade821530bf145%3A0x84c1e9b114790fe0!2sLa%20Casa%20de%20Las%20Llantas!5e0!3m2!1ses-419!2sar!4v1653608536154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="col-md-4 text-center">
+        <ul class="list-unstyled mb-0">
+            <li><i class="fas fa-map-marker-alt fa-2x"></i>
+               <a href="https://www.google.com/maps?ll=-31.373961,-58.012663&z=17&t=m&hl=es-419&gl=AR&mapclient=embed&cid=9566184030273605600"  target="_blank"><p>Concordia, Entre Rios, Argentina</p></a>
+            </li>
+            <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                <a  href="tel:+5493454214174" target="_blank"><p>3454166220</p></a>
+            </li>
+            <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+               <a href="contacto@lacasadelasllantas.com" target="_blank"><p>contacto@lacasadelasllantas.com</p></a>
+            </li>
+        </ul>
       </div>
     </div> 
 </section>
@@ -324,26 +326,28 @@
   </div>
 </section>
 
-      <!-- FOOTER -->
-      <footer class="container">
-        <p><a href="#main">Hacia arriba</a></p>
-        <div class="row">
-        <p  class="containerp col-md-9">© 2022 La Casa de las Lantas | Marca registrada | <a href="#">Políticas de Privacidad</a>|<a href="#">Terminos</a></p>
+    <!-- FOOTER -->
+    <footer class="container">
+      <p><a href="#" class="d-flex justify-content-end"><i class="bi bi-arrow-up-circle-fill"></i></a></p>
+      <div class="row">
 
-        <div class="fooster__item col-md-3 d-flex justify-content-end">
-          <!--WhatsApp--> 
-          <a class="fooster__icon fab fa-whatsapp d-flex justify-content-center"  href="https://api.whatsapp.com/send?phone=5493454166220&text=hola,%20me%20interesa%20esto:" target="_blank">
-          </a>
-          <!--Facebook-->
-          <a class="fooster__icon fab fa-facebook d-flex justify-content-center align-items-start" href="https://www.facebook.com/lacasadelasllantasconcordia/" target="_blank">
-          </a>
-          <!--Instagram-->
-          <a class="fooster__icon fab fa-instagram d-flex justify-content-center"  href="https://www.instagram.com/lacasadelasllantas/" target="_blank">
-          </a>
-        </div>
+      <div class="col-md-3 d-flex justify-content-end">
+        <!--WhatsApp--> 
+        <a class="fab fa-whatsapp d-flex justify-content-center"  href="https://api.whatsapp.com/send?phone=5493454166220&text=hola,%20me%20interesa%20esto:" target="_blank">
+        </a>
+        <!--Facebook-->
+        <a class="fab fa-facebook d-flex justify-content-center align-items-start" href="https://www.facebook.com/lacasadelasllantasconcordia/" target="_blank">
+        </a>
+        <!--Instagram-->
+        <a class="fab fa-instagram d-flex justify-content-center"  href="https://www.instagram.com/lacasadelasllantas/" target="_blank">
+        </a>
+
       </div>
-      </footer>
-    </main>
+      <div class="containerp">
+        <p  class="containerSub">La Casa de las Lantas © 2022 | Marca registrada | Políticas de Privacidad</p>
+      </div>
+    </footer>
+  </main>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
