--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="La casa de las llantas desde 1972 y con una amplia trayectoria en la ciudad de Concordia, empresa destacada y con permanecia en el mercado automotor que ofrece soluciones a la medida de cada cliente.">
+    <meta name="keywords" content="La casa de las llantas desde 1972 y con una amplia trayectoria en la ciudad de Concordia.">
+    <meta name="author" content="La casa de las llantas © 2022">
+    <meta property="og:title" content="La casa de las llantas © 2022">
+    <meta property="og:description" content="Amplia trayectoria en la ciudad de Concordia, empresa destacada y con permanecia en el mercado automotor">
+
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="multimedia/image/favicon.png">
 
     <title>La Casa de las Lantas</title>
 
-    <!-- Styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="./css/style.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
@@ -23,7 +25,6 @@
 </head>
 
   <body>
-<!-- Header -->
     <header>
       <a href="index.html">
           <img class="cabeceraIcon" src="multimedia/image/icon.png" alt="la casa de las llantas">
@@ -52,7 +53,6 @@
       </nav>
     </header>
 
-<!-- Main -->
     <main role="main" id="main">
 
       <div id="carouselExampleDark" class="carousel carousel-dark slide " data-bs-ride="carousel" >
@@ -65,10 +65,10 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="multimedia/image/banner-1.jpg" class="" alt="...">
+            <img src="multimedia/image/banner-1.jpg" alt="la.casa.de.las.llantas">
             <div class="container">
               <div class="carousel-caption text-start">
-                <img src="multimedia/image/icon.png"></img>
+                <img src="multimedia/image/icon.png"  alt="la.casa.de.las.llantas"></img>
                 <h4>Contamos con gran experiencia</h4><h4>Desde 1972 al servicio de nuestros clientes</h4>
                 <a class="btn btn-lg btn-primary" href="#contacto">Contactanos</a>
               </div>
@@ -76,7 +76,7 @@
           </div>
 
           <div class="carousel-item" data-bs-interval="5000">
-            <img src="multimedia/image/banner-2.jpg" class="" alt="la.casa.de.las.llantas">
+            <img src="multimedia/image/banner-2.jpg" alt="la.casa.de.las.llantas">
             <div class="container">
               <div class="carousel-caption text-start">
                 <h2>taller integral <br> de  Chapa y pintura</h2>
@@ -88,7 +88,7 @@
           </div>
 
           <div class="carousel-item" data-bs-interval="5000">
-            <img src="multimedia/image/banner-3.jpg" class="" alt="la.casa.de.las.llantas">
+            <img src="multimedia/image/banner-3.jpg" alt="la.casa.de.las.llantas">
             <div class="container">
               <div class="carousel-caption text-start">
                 <h2>venta automotor</h2>
@@ -100,7 +100,7 @@
           </div>
 
           <div class="carousel-item" data-bs-interval="5000">
-            <img src="multimedia/image/banner-4.jpg" class="" alt="la.casa.de.las.llantas">
+            <img src="multimedia/image/banner-4.jpg" alt="la.casa.de.las.llantas">
             <div class="container">
               <div class="carousel-caption text-start">
                 <h2>todas las llantas</h2>
@@ -123,15 +123,13 @@
         </button>
       </div>
 
-      <!-- inicio automotores -->
       <section id="automotores" >
        <h2 class="automotores">automotores</h2>
        <div class="linea"></div>
        <div class="autos">
         <!-- Auto 1 -->
         <div class="card">
-           
-          <input class="inputauto" type="checkbox" name="">
+          <input class="inputauto" type="checkbox" name="" label= "true">
           <div class="toggle">+</div>
           <div class="imgBx"><img id="peugeot-308" src="../multimedia/autos/peugeot-308/308.gif" alt="Peugeot 308 1.6"> 
           </div>
@@ -177,8 +175,6 @@
     </div>
     </section>
 
-    <!-- inicio chapa y pintura -->
-
     <section id="chapa-y-pintura" class="chapa-y-pintura">
       <h2 class="chapaypintura">Chapa y Pintura</h2>
       <div class="lineacyp"></div>
@@ -198,12 +194,10 @@
     </section>
 
 
-    <!-- llantas -->
     <section id="llantas" class="llantas">
       <h2 class="llantasp">llantas</h2>
       <div class="lineallanta"></div>
       <div class="llantasdiv">
-      <!-- Llanta 18" 1 -->
       <h3>Llantas de 18"</h3>
       <div class="llantas__18" id="llanta-18">
         <div>
@@ -211,27 +205,22 @@
         </div> 
       </div>
       <h3>Llantas de 17"</h3>
-      <!-- Llanta 17" 1-->
       <div class="llantas__17" id="llanta-17"> 
         <div>
           <img src="../multimedia/llantas/llanta-1/llanta1.gif" title="Llantas de 17" alt="Llantas de 17"> 
         </div>
-      <!-- Llanta 17" 2 -->
         <div>
           <img src="../multimedia/llantas/llanta-6/llanta6.gif" title="Llantas de 17" alt="Llantas de 17"> 
         </div>
       </div>
       <h3>Llantas de 16"</h3>
-      <!-- Llanta 16" 1 -->
       <div class="llantas__16" id="llanta-16">
         <div>
           <img src="../multimedia/llantas/llanta-3/llanta3.gif" title="Llantas de 16" alt="Llantas de 16"> 
         </div> 
-      <!-- Llanta 16" 2 -->
         <div>
           <img src="../multimedia/llantas/llanta-4/llanta4.jpg" title="Llantas de 16" alt="Llantas de 16"> 
         </div> 
-        <!-- Llanta 16" 3 -->
         <div>
           <img src="../multimedia/llantas/llanta-5/llanta5.jpg" title="Llantas de 16" alt="Llantas de 16"> 
         </div>
@@ -239,9 +228,7 @@
       </div>
       </section>
     
-<!--Section: Contact v.2-->
 <section class="mb-4" id="contacto">
-
   <h2 class="contactop">Formulario de Contacto</h2>
   <div class="lineacontacto"></div>
 
@@ -255,13 +242,13 @@
                   <div class="col-md-6">
                       <div class="md-form mb-0">
                           <input type="text" id="name" name="name" class="form-control">
-                          <label for="name" class="">Nombre</label>
+                          <label for="name">Nombre</label>
                       </div>
                   </div>
                   <div class="col-md-6">
                       <div class="md-form mb-0">
                           <input type="text" id="email" name="email" class="form-control">
-                          <label for="email" class="">Email</label>
+                          <label for="email">Email</label>
                       </div>
                   </div>
               </div>
@@ -269,7 +256,7 @@
                   <div class="col-md-12">
                       <div class="md-form mb-0">
                           <input type="text" id="phone" name="phone" class="form-control">
-                          <label for="phone" class="">Telefono</label>
+                          <label for="phone">Telefono</label>
                       </div>
                   </div>
               </div>
@@ -293,7 +280,7 @@
     <div class="row">
         <h2 class="text-center ubi">Estamos en:</h2>
       <div class="contacto__mapa text-center col-md-8">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d902.2547836601474!2d-58.01260617371327!3d-31.373863601085997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ade821530bf145%3A0x84c1e9b114790fe0!2sLa%20Casa%20de%20Las%20Llantas!5e0!3m2!1ses-419!2sar!4v1653608536154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d902.2547836601474!2d-58.01260617371327!3d-31.373863601085997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ade821530bf145%3A0x84c1e9b114790fe0!2sLa%20Casa%20de%20Las%20Llantas!5e0!3m2!1ses-419!2sar!4v1653608536154!5m2!1ses-419!2sar" title="la casa de las llantas" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="col-md-4 text-center">
         <ul class="list-unstyled mb-0">
@@ -310,7 +297,6 @@
       </div>
     </div> 
 </section>
-<!--Section: Contact v.2-->
 
 <section class="section-new">
   <div class="container-fluid pb-5 pt-5">
@@ -324,34 +310,27 @@
       </div>
     </div>
   </div>
-</section>
+  </section>
+</main>
+   
+   <footer class="container">
+    <div class="flecha"><a href="#" ><i class="bi bi-arrow-up-circle-fill"></i></a></div>
+    <div class="row">
+    <div class="col-md-3 d-flex justify-content-end">
+      <a class="fab fa-whatsapp d-flex justify-content-center"  href="https://api.whatsapp.com/send?phone=5493454166220&text=hola,%20me%20interesa%20esto:" target="_blank">
+      </a>
+      <a class="fab fa-facebook d-flex justify-content-center align-items-start" href="https://www.facebook.com/lacasadelasllantasconcordia/" target="_blank">
+      </a>
+      <a class="fab fa-instagram d-flex justify-content-center"  href="https://www.instagram.com/lacasadelasllantas/" target="_blank">
+      </a>
 
-    <!-- FOOTER -->
-    <footer class="container">
-      <p><a href="#" class="d-flex justify-content-end"><i class="bi bi-arrow-up-circle-fill"></i></a></p>
-      <div class="row">
+    </div>
+    <div class="containerp">
+      <p  class="containerSub">La Casa de las Lantas © 2022 | Marca registrada | Políticas de Privacidad</p>
+    </div>
+  </footer>
 
-      <div class="col-md-3 d-flex justify-content-end">
-        <!--WhatsApp--> 
-        <a class="fab fa-whatsapp d-flex justify-content-center"  href="https://api.whatsapp.com/send?phone=5493454166220&text=hola,%20me%20interesa%20esto:" target="_blank">
-        </a>
-        <!--Facebook-->
-        <a class="fab fa-facebook d-flex justify-content-center align-items-start" href="https://www.facebook.com/lacasadelasllantasconcordia/" target="_blank">
-        </a>
-        <!--Instagram-->
-        <a class="fab fa-instagram d-flex justify-content-center"  href="https://www.instagram.com/lacasadelasllantas/" target="_blank">
-        </a>
-
-      </div>
-      <div class="containerp">
-        <p  class="containerSub">La Casa de las Lantas © 2022 | Marca registrada | Políticas de Privacidad</p>
-      </div>
-    </footer>
-  </main>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!--JavaScript-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js">document.onselectstart = function () {return true; };document.oncontextmenu = function () { return true; };document.onmousedown = function () { return true; }; document.onkeydown = function () {return true;};
     </script>
