--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="La casa de las llantas desde 1972 y con una amplia trayectoria en la ciudad de Concordia, empresa destacada y con permanecia en el mercado automotor que ofrece soluciones a la medida de cada cliente.">
-    <meta name="keywords" content="La casa de las llantas desde 1972 y con una amplia trayectoria en la ciudad de Concordia.">
+    <meta name="keywords" content="La casa de las llantas">
     <meta name="author" content="La casa de las llantas © 2022">
     <meta property="og:title" content="La casa de las llantas © 2022">
     <meta property="og:description" content="Amplia trayectoria en la ciudad de Concordia, empresa destacada y con permanecia en el mercado automotor">
+    <meta property="og:image" content="multimedia/image/favicon.png">
 
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="multimedia/image/favicon.png">
 
-    <title>La Casa de las Lantas</title>
+    <title>La Casa de las llantas desde 1972 en Concordia</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
@@ -27,7 +28,7 @@
   <body>
     <header>
       <a href="index.html">
-          <img class="cabeceraIcon" src="multimedia/image/icon.png" alt="la casa de las llantas">
+          <img class="cabeceraIcon" src="multimedia/image/icon.png" alt="Icono de cabecera de la casa de las llantas">
       </a>
       <input type="checkbox" id="menu-bar">
       <label for="menu-bar">Menu</label>
@@ -64,22 +65,22 @@
         </div>
         <div class="carousel-inner">
 
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="multimedia/image/banner-1.jpg" alt="la.casa.de.las.llantas">
+          <div class="carousel-item active carousel-otro" data-bs-interval="10000">
+            <img src="multimedia/image/banner-1.jpg" alt="banner 1 la casa de las llantas">
             <div class="container">
-              <div class="carousel-caption text-start">
-                <img src="multimedia/image/icon.png"  alt="la.casa.de.las.llantas"></img>
+              <div class="carousel-caption text-start carousel-texto">
+                <img src="multimedia/image/icon.png"  alt="icono.de.la.casa.de.las.llantas"></img>
                 <h4>Contamos con gran experiencia</h4><h4>Desde 1972 al servicio de nuestros clientes</h4>
                 <a class="btn btn-lg btn-primary" href="#contacto">Contactanos</a>
               </div>
             </div>
           </div>
 
-          <div class="carousel-item" data-bs-interval="5000">
-            <img src="multimedia/image/banner-2.jpg" alt="la.casa.de.las.llantas">
+          <div class="carousel-item carousel-otro" data-bs-interval="5000">
+            <img src="multimedia/image/banner-2.jpg" alt="banner 2 la casa de las llantas">
             <div class="container">
-              <div class="carousel-caption text-start">
-                <h2>taller integral <br> de  Chapa y pintura</h2>
+              <div class="carousel-caption text-start carousel-texto">
+                <h1>taller integral <br> de  Chapa y pintura</h1>
                 <h4>Reparacion de bollos por choque y granizo</h4>
                 <h4>Reparacion y pintado de paragolpes y molduras</h4>
                 <a class="btn btn-lg btn-primary" href="#chapa-y-pintura">Chapa y Pintura</a>
@@ -87,11 +88,11 @@
             </div>
           </div>
 
-          <div class="carousel-item" data-bs-interval="5000">
-            <img src="multimedia/image/banner-3.jpg" alt="la.casa.de.las.llantas">
+          <div class="carousel-item carousel-otro" data-bs-interval="5000">
+            <img src="multimedia/image/banner-3.jpg" alt="banner 3 de la casa de las llantas">
             <div class="container">
-              <div class="carousel-caption text-start">
-                <h2>venta automotor</h2>
+              <div class="carousel-caption text-start carousel-texto">
+                <h1>venta automotor</h1>
                 <h4>contamos con</h4>
                 <h4>todas las marcas</h4>
                 <a class="btn btn-lg btn-primary" href="#automotores">Automotores</a>
@@ -99,11 +100,11 @@
             </div>
           </div>
 
-          <div class="carousel-item" data-bs-interval="5000">
-            <img src="multimedia/image/banner-4.jpg" alt="la.casa.de.las.llantas">
+          <div class="carousel-item carousel-otro" data-bs-interval="5000">
+            <img src="multimedia/image/banner-4.jpg" alt="banner 4 de la casa de las llantas">
             <div class="container">
-              <div class="carousel-caption text-start">
-                <h2>todas las llantas</h2>
+              <div class="carousel-caption text-start carousel-texto">
+                <h1>todas las llantas</h1>
                 <h4>autos </h4><h4>camionetas</h4>
                 <a class="btn btn-lg btn-primary" href="#llantas">Llantas</a>
               </div>
@@ -179,16 +180,16 @@
       <h2 class="chapaypintura">Chapa y Pintura</h2>
       <div class="lineacyp"></div>
       <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-md-7 titulochapaypint">
           <h2 class="featurette-heading">Taller integral de chapa y Pintura</h2>
-          <ul class="lead">
+          <ul class="lead texto-chapaypintura">
             <li>- Repintado de piezas</li> 
             <li>- Reparación de bollos por choque y granizo </li>
             <li> - Reparación y pintado de paragolpes y molduras</li>
           </ul>
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" alt="500x500" src="multimedia/pintura/pintura.gif" data-holder-rendered="true">
+        <div class="col-md-5 imagenchapaypint">
+          <img class="featurette-image img-fluid mx-auto" alt="chapa-y-pintura" src="multimedia/pintura/pintura.gif" data-holder-rendered="true">
         </div>
       </div>
     </section>
@@ -207,22 +208,22 @@
       <h3>Llantas de 17"</h3>
       <div class="llantas__17" id="llanta-17"> 
         <div>
-          <img src="../multimedia/llantas/llanta-1/llanta1.gif" title="Llantas de 17" alt="Llantas de 17"> 
+          <img src="../multimedia/llantas/llanta-1/llanta1.gif" title="Llantas de 17" alt="1 Llantas de 17"> 
         </div>
         <div>
-          <img src="../multimedia/llantas/llanta-6/llanta6.gif" title="Llantas de 17" alt="Llantas de 17"> 
+          <img src="../multimedia/llantas/llanta-6/llanta6.gif" title="Llantas de 17" alt="2 Llantas de 17"> 
         </div>
       </div>
       <h3>Llantas de 16"</h3>
       <div class="llantas__16" id="llanta-16">
         <div>
-          <img src="../multimedia/llantas/llanta-3/llanta3.gif" title="Llantas de 16" alt="Llantas de 16"> 
+          <img src="../multimedia/llantas/llanta-3/llanta3.gif" title="Llantas de 16" alt="1 Llantas de 16"> 
         </div> 
         <div>
-          <img src="../multimedia/llantas/llanta-4/llanta4.jpg" title="Llantas de 16" alt="Llantas de 16"> 
+          <img src="../multimedia/llantas/llanta-4/llanta4.jpg" title="Llantas de 16" alt="2 Llantas de 16"> 
         </div> 
         <div>
-          <img src="../multimedia/llantas/llanta-5/llanta5.jpg" title="Llantas de 16" alt="Llantas de 16"> 
+          <img src="../multimedia/llantas/llanta-5/llanta5.jpg" title="Llantas de 16" alt="3 Llantas de 16"> 
         </div>
       </div>
       </div>
@@ -232,7 +233,7 @@
   <h2 class="contactop">Formulario de Contacto</h2>
   <div class="lineacontacto"></div>
 
-  <h2 class="h1-responsive text-center">Consultanos</h2>
+  <h2 class="h2-responsive text-center">Consultanos</h2>
   <h2 class="text-center texto">De Lunes a Viernes de 8 a 12hs y de 15 a 20hs <br> Los Sabados de 8 a 12hs</h2>
 
   <div>
@@ -300,13 +301,13 @@
 
 <section class="section-new">
   <div class="container-fluid pb-5 pt-5">
-    <div class="newsletter-card p-3 p-md-4 text-white">
+    <div class="newsletter-card p-3 p-md-4 text-white suscripcion">
       <div class="d-flex gap-3 pb-3 d-flex justify-content-center align-items-center">
         <h3> Suscribite a nuestro newsletter </h3>
       </div>
       <div class="d-flex gap-4">
         <input type="email" class="form-control py-3" id="inp1" placeholder="Dejanos tu email">
-        <button class="btn-new text-white px-4 py-2"> OK </button>
+        <button class="btn-new text-white px-4 py-2 texto-suscipcion"> OK </button>
       </div>
     </div>
   </div>
@@ -314,7 +315,7 @@
 </main>
    
    <footer class="container">
-    <div class="flecha"><a href="#" ><i class="bi bi-arrow-up-circle-fill"></i></a></div>
+    <div class="flecha"><a href="#" ><i class="bi bi-arrow-up-circle-fill flecha1"></i></a></div>
     <div class="row">
     <div class="col-md-3 d-flex justify-content-end">
       <a class="fab fa-whatsapp d-flex justify-content-center"  href="https://api.whatsapp.com/send?phone=5493454166220&text=hola,%20me%20interesa%20esto:" target="_blank">
