--- a/index.html
+++ b/index.html
@@ -42,11 +42,18 @@
                   </ul>
               </li>
               <li><a href="#chapa-y-pintura">Chapa y Pintura</a></li>
+              <li><a href="#lubricentro">Lubricentro</a></li>
+              <li><a href="#tallermecanico">Taller Mecanico</a></li>
               <li><a href="#llantas">Llantas</a>
                   <ul class="cabecera__sublista">
-                  <li><a href="#llanta-18">Llantas 18</a></li>
-                  <li><a href="#llanta-17">Llantas 17</a></li>
-                  <li><a href="#llanta-16">Llantas 16</a></li>
+                  <li><a href="#ReparacionDeLlantas">Reparacion De Llantas</a></li>
+                  <li><a href="#ventaDeLlantas">Venta De Llantas</a>
+                    <ul class="cabecera__sublista_sublista">
+                      <li><a href="#llanta-18">Llantas 18</a></li>
+                      <li><a href="#llanta-17">Llantas 17</a></li>
+                      <li><a href="#llanta-16">Llantas 16</a></li>
+                    </ul>
+                  </li>
                   </ul>
               </li>
               <li><a href="#contacto">Contacto</a></li>
@@ -127,12 +134,25 @@
       <section id="automotores" >
        <h2 class="automotores">automotores</h2>
        <div class="linea"></div>
+
+       <ul class="lead txtAutomotores">
+        <li>Estás buscando comprar un vehículo? 🚗</li> 
+        <li>Vení a La Casa de Las Llantas - División Automotores y llevate el que estás buscando!</li>
+        <li>Te ofrecemos multiples beneficios:</li>
+        <li>✅ Excelente atención y asesoramiento personalizado</li>
+        <li>✅ Autos de diferentes marcas</li>
+        <li>✅ Gestoría propia</li>
+        <li>✅ Financiación</li>
+        <li>✅ Permutas</li>
+        <li>Contáctanos <a href="#contacto">aqui</a></li>
+      </ul>  
+
        <div class="autos">
         <!-- Auto 1 -->
         <div class="card">
           <input class="inputauto" type="checkbox" name="" label= "true">
           <div class="toggle">+</div>
-          <div class="imgBx"><img id="peugeot-308" src="../multimedia/autos/peugeot-308/308.gif" alt="Peugeot 308 1.6"> 
+          <div class="imgBx"><img id="peugeot-308" src="multimedia/autos/peugeot-308/308.gif" alt="Peugeot 308 1.6"> 
           </div>
           <div class="details">
               <h2>PEUGEOT 308</h2>
@@ -155,7 +175,7 @@
       <div class="card">
         <input class="inputauto" type="checkbox" name="">
         <div class="toggle">+</div>
-        <div class="imgBx"> <img id="gol-trend" src="../multimedia/autos/gol-trend/gol.gif" alt="Gol trend 1.6"></div>
+        <div class="imgBx"> <img id="gol-trend" src="multimedia/autos/gol-trend/gol.gif" alt="Gol trend 1.6"></div>
         <div class="details">
             <h2>VOLKSWAGEN GOL TREND</h2>
               <ul> 
@@ -181,11 +201,18 @@
       <div class="lineacyp"></div>
       <div class="row featurette">
         <div class="col-md-7 titulochapaypint">
-          <h2 class="featurette-heading">Taller integral de chapa y Pintura</h2>
+          <h2 class="featurette-heading titulochapaypinth2">Taller integral de chapa y Pintura</h2>
           <ul class="lead texto-chapaypintura">
-            <li>- Repintado de piezas</li> 
-            <li>- Reparación de bollos por choque y granizo </li>
-            <li> - Reparación y pintado de paragolpes y molduras</li>
+            <li>Contamos con un equipo calificado para solucionarte todo lo que necesitas:</li>
+            <li>📌Cabina de pintura</li>
+            <li>📌Repintado de piezas</li> 
+            <li>📌Reparación de autos volcados</li>
+            <li>📌Reparación de abollones</li>
+            <li>📌Choques en general</li>
+            <li>📌Paragolpes y puertas desalineadas</li>
+            <li>📌Reparación de rayones de llantas</li>
+            <li>📌Trabajamos con todos los seguros</li>
+            <li>Solicitá turno <a href="#contacto">aqui</a>!</li>
           </ul>
         </div>
         <div class="col-md-5 imagenchapaypint">
@@ -194,40 +221,115 @@
       </div>
     </section>
 
+    <section id="lubricentro" class="lubricentro">
+      <h2 class="lubricentroh2">Lubricentro</h2>
+      <div class="lineacyp"></div>
+      <div class="row featurette">
+        <div class="col-md-7 tituloLubricentro">
+          <ul class="lead texto-lubricentro">
+            <li>📌Te recordamos que:</li>
+            <li>✅El filtro mantiene el circuito de lubricación protegido de impurezas extendiendo así la vida útil del motor.</li>
+            <li>✅El aceite del motor  mantiene limpia las superficies metálicas y previene la formación de depósitos. Esto ayuda a garantizar una larga vida del motor.</li>
+            <li>✅Solicitá turno <a href="#contacto">aqui</a> para realizar el cambio de Aceite y Filtro  y disfrutá de tu auto!</li>
+          </ul>
+        </div>
+        <div class="col-md-5 imagenLubricentro">
+          <img class="featurette-image img-fluid mx-auto" alt="lubricentro" src="multimedia/lubricentro/lubricentro.jpg" data-holder-rendered="true">
+        </div>
+      </div>
+    </section>
+
+    <section id="tallermecanico" class="tallermecanico">
+      <h2 class="tallermecanicoh2">Taller Mecanico</h2>
+      <div class="lineacyp"></div>
+      <div class="row featurette">
+        <div class="col-md-7 titulotallermecanico">
+          <ul class="lead texto-tallermecanico">
+            <li>🚗¿Estás buscando un mecánico de confianza?</li> 
+            <li>🚗Entonces trae tu auto y déjalo en manos de un equipo de profesionales orientados a brindarte el mejor servicio.</li>
+            <li>🚗Verificamos, reparamos o sustituimos todas las partes del tren delantero que lo componen (rótula, bujes, extremos, homocinética, semieje, fuelle, etc).</li>
+            <li>🚗Sentís incómodas vibraciones durante la conducción de tu auto?</li>
+            <li>🚗Es hora de realizar una alineación! </li>
+            <li>🚗Contamos con un equipo especializado para dejar tu auto en perfecta condiciones!</li>
+            <li>🚗No lo dudes más! </li>
+            <li>🚗¡Solicitá tu turno <a href="#contacto">aqui</a>!</li>
+          </ul>
+        </div>
+        <div class="col-md-5 imagentallermecanico">
+          <img class="featurette-image img-fluid mx-auto" alt="taller mecanico" src="multimedia/tallermecanico/tallermecanico.gif" data-holder-rendered="true">
+        </div>
+      </div>
+    </section>
 
     <section id="llantas" class="llantas">
       <h2 class="llantasp">llantas</h2>
       <div class="lineallanta"></div>
+      <div class="row featurette espaciorepllanta">
+        <div class="col-md-7 titulorepllantas">
+          <h2 id="ReparacionDeLlantas" class="featurette-heading titulorepllantash2">Reparacion de llantas</h2>
+          <ul class="lead texto-repllanta">
+            <li>Pensaste que tu llanta no servía más?</li> 
+            <li>En La Casa de Las Llantas te la reparamos!!!</li>
+            <li>Nuestro gran equipo te repara todas las llantas que te imagines!</li>
+            <li>Realizamos reparación de:</li>
+            <li>🚗  Auto</li>
+            <li>🛵  Moto</li>
+            <li>🚙  Camioneta</li>
+            <li>🚛  Camión</li>
+            <li>🚕  Cuatriciclo</li>
+            <li>🚜  Máquinas agrícolas</li>
+            <li>🚜  Tractor</li>
+            <li>Queres asesoramiento? Contactanos <a href="#contacto">aqui</a></li>
+          </ul>
+        </div>
+        <div class="col-md-5 imagenrepllantas">
+          <img class="featurette-image img-fluid mx-auto" alt="reparacion de llantas" src="multimedia/llantas/reparacionllantas.gif" data-holder-rendered="true">
+        </div>
+      </div>
+      <div class="titulorventllantas">
+        <h2 id="ventaDeLlantas" class="featurette-heading ventaDeLlantas">Venta de llantas</h2>
+        <ul class="lead texto-repllanta">
+          <li>Estrená hoy las mejores llantas para tu vehículo las encontrás en un único lugar! 🚗</li>
+          <li>Vení que te asesoramos! </li>
+          <li>Tenemos todas las llantas que buscas:</li>
+          <li>🚗  Llantas para Auto</li>
+          <li>🚙  Llantas para Camioneta</li>
+          <li>🚛  Llantas para Camión</li>
+          <li>🚜  Llantas para Tractor</li>
+          <li>Aún no te decidiste? Contactanos <a href="#contacto">aqui</a></li>
+        </ul>
+      </div>
       <div class="llantasdiv">
       <h3>Llantas de 18"</h3>
       <div class="llantas__18" id="llanta-18">
         <div>
-          <img src="../multimedia/llantas/llanta-2/llanta2.gif" title="Llantas de 18" alt="Llantas de 18"> 
+          <img src="multimedia/llantas/llanta-2/llanta2.gif" title="Llantas de 18" alt="Llantas de 18"> 
         </div> 
       </div>
       <h3>Llantas de 17"</h3>
       <div class="llantas__17" id="llanta-17"> 
         <div>
-          <img src="../multimedia/llantas/llanta-1/llanta1.gif" title="Llantas de 17" alt="1 Llantas de 17"> 
+          <img src="multimedia/llantas/llanta-1/llanta1.gif" title="Llantas de 17" alt="1 Llantas de 17"> 
         </div>
         <div>
-          <img src="../multimedia/llantas/llanta-6/llanta6.gif" title="Llantas de 17" alt="2 Llantas de 17"> 
+          <img src="multimedia/llantas/llanta-6/llanta6.gif" title="Llantas de 17" alt="2 Llantas de 17"> 
         </div>
       </div>
       <h3>Llantas de 16"</h3>
       <div class="llantas__16" id="llanta-16">
         <div>
-          <img src="../multimedia/llantas/llanta-3/llanta3.gif" title="Llantas de 16" alt="1 Llantas de 16"> 
+          <img src="multimedia/llantas/llanta-3/llanta3.gif" title="Llantas de 16" alt="1 Llantas de 16"> 
         </div> 
         <div>
-          <img src="../multimedia/llantas/llanta-4/llanta4.jpg" title="Llantas de 16" alt="2 Llantas de 16"> 
+          <img src="multimedia/llantas/llanta-4/llanta4.jpg" title="Llantas de 16" alt="2 Llantas de 16"> 
         </div> 
         <div>
-          <img src="../multimedia/llantas/llanta-5/llanta5.jpg" title="Llantas de 16" alt="3 Llantas de 16"> 
+          <img src="multimedia/llantas/llanta-5/llanta5.jpg" title="Llantas de 16" alt="3 Llantas de 16"> 
         </div>
       </div>
       </div>
-      </section>
+    </div>
+    </section>
     
 <section class="mb-4" id="contacto">
   <h2 class="contactop">Formulario de Contacto</h2>
@@ -283,7 +385,7 @@
       <div class="contacto__mapa text-center col-md-8">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d902.2547836601474!2d-58.01260617371327!3d-31.373863601085997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ade821530bf145%3A0x84c1e9b114790fe0!2sLa%20Casa%20de%20Las%20Llantas!5e0!3m2!1ses-419!2sar!4v1653608536154!5m2!1ses-419!2sar" title="la casa de las llantas" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 text-center espacioubi">
         <ul class="list-unstyled mb-0">
             <li><i class="fas fa-map-marker-alt fa-2x"></i>
                <a href="https://www.google.com/maps?ll=-31.373961,-58.012663&z=17&t=m&hl=es-419&gl=AR&mapclient=embed&cid=9566184030273605600"  target="_blank"><p>Concordia, Entre Rios, Argentina</p></a>
@@ -316,8 +418,8 @@
    
    <footer class="container">
     <div class="flecha"><a href="#" ><i class="bi bi-arrow-up-circle-fill flecha1"></i></a></div>
-    <div class="row">
-    <div class="col-md-3 d-flex justify-content-end">
+    <div class="row containerp">
+    <div class="col-md-3 d-flex justify-content-end ">
       <a class="fab fa-whatsapp d-flex justify-content-center"  href="https://api.whatsapp.com/send?phone=5493454166220&text=hola,%20me%20interesa%20esto:" target="_blank">
       </a>
       <a class="fab fa-facebook d-flex justify-content-center align-items-start" href="https://www.facebook.com/lacasadelasllantasconcordia/" target="_blank">
@@ -326,7 +428,7 @@
       </a>
 
     </div>
-    <div class="containerp">
+    <div >
       <p  class="containerSub">La Casa de las Lantas © 2022 | Marca registrada | Políticas de Privacidad</p>
     </div>
   </footer>
